Refactor: persistence 모듈 분리